2009-06-29  Michael Wiegand <michael.wiegand@intevation.de>

	* cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c (plugin_init):
	Adapted calls of plug_set_* functions to API change.

2009-06-29  Michael Wiegand <michael.wiegand@intevation.de>

	* cnvts/find_service/find_service.c: Removed obsolete French defines.
	(plugin_init): Adapted calls of plug_set_* functions to API change.

2009-06-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* configure.in: Removed handling of language setting.

	* configure: updated.

2009-06-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvasd/oval_plugin.c (oval_plugin_add): Adapated
	calls of plug_set_* functions to API change. 

2009-06-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvasd/openvasd.c (init_openvasd): Don't use the
	deprecated method store_init_sys.

2009-06-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvasd/preferences.c (preferences_new): Removed creation
	of parameter "language".

	* openvasd/nasl_plugins.c (nasl_plugin_add): Removed
	handling of language.

	* include/config.h.in, configure.in: Removed handling
	of OPENVASD_LANGUAGE.

2009-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvasd/comm.c (send_plug_info): Fixed a bug regarding missing
	desc. Removed unnecessary NULL setting.

2009-06-23  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c: Making sure the copyright and summary is
	correctly set for OVAL plugins.
	(start_element, text, end_element): Add support for parsing "rights"
	element.
	(oval_plugin_add): Set copyright and summary when adding OVAL plugins
	to the cache.

2009-06-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/comm.c (send_plug_info): Fixed a bug regarding setting
	a placeholder name. Also improved error reporting to inform
	about as many problems as possible already during the first run.

2009-06-23  Michael Wiegand <michael.wiegand@intevation.de>
